IPS Database v0.5: Added IPS for support of any file type. IPS Database uses this for .ips files and other modules can use it for their files. Font Editor v0.4: Added code so IPS Database can use Earthbound fonts. IPS Database .xml and files changed so font exports are used instead of the two font .ips files.
git-svn-id: file:///tmp/svn/trunk/jhack@36 e5242d76-9126-0410-bb86-e0b726a7b37f